Pull up following revision(s) (requested by martin in ticket #270): 	sys/kern/sys_pipe.c: revision 1.136 	tests/lib/libc/sys/t_pipe2.c: revision 1.4 	tests/lib/libc/sys/t_pipe2.c: revision 1.5 	tests/lib/libc/sys/t_pipe2.c: revision 1.6 	tests/lib/libc/sys/t_pipe2.c: revision 1.7 Make sure we can deliver two file descriptors for pipe2() before we set up anything special (like close on exec). Fixes PR kern/46457. Add a case for PR kern/46457. This is skipped for the time being, as it reproduces the panic described in the PR. Enable the test for PR kern/46457 now that it does not crash the kernel any more. Fix typo in comment. Simplify the test for PR kern/4645 and make it independend of resource settings.